@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Updated documentation to reflect limitation of 
+	  Fl::delete_widget() (STR #1306)
 	- Fixed line wrapping in Fl_Text_Display (STR #1227)
 	- New function Fl::event_original_key() returns key 
 	  code before NumLock handling.
